# upi-deeplinks-python-sdk

./: .bumpversion.cfg  .pre-commit-config.yaml  .pypirc  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  python-publish.yml  release.yml
Setu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/: index.html
assets/: preview.md
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
setu/: __init__.py  auth.py  body.py  common.py  contract.py  deeplink.py  endpoint.py  serial.py
setu_python_sdk/: __init__.py  auth.py  body.py  contract.py  deeplink.py  endpoint.py  serial.py
tests/: __init__.py  conftest.py  test_auth.py  test_deeplink.py  test_deeplink_expire.py  test_endpoint.py
usage/: index.html
